--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 * {
-  background-color: #070707;
+  background-color: #15161a;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   color: white;
+  font-family: "satoshi", sans-serif;
 }
 
 .container {
@@ -12,25 +13,302 @@
   margin: 0 auto;
 }
 
-.navbar{
-  padding: 0 64px;
+.section_wrapper {
+  max-width: 1120px;
+  width: 100%;
+  margin: 0 auto;
+  padding-right: 32px;
+  padding-left: 32px;
+
+}
+
+.navbar {
+  padding: 20px 64px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.nav_list ul{
+.nav_logo {
+  flex: 1;
+}
+
+.nav_list {
+  flex: 4;
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav_action {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  column-gap: 10px;
+}
+
+.nav_list ul {
   display: flex;
   justify-content: space-between;
 }
 
-ul{
+.nav_list li a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
   display: flex;
   justify-content: space-between;
 }
 
-ul li{
+ul li {
   text-decoration: none;
   list-style-type: none;
-  
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 12px;
+  font-size: 16px;
+  letter-spacing: .033125em;
+  line-height: 1.5;
+  text-transform: uppercase;
+}
+
+.nav_action .disc {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: linear-gradient(135deg, #665DCD 0%, #5FA4E6 44.76%, #D2AB67 100%);
+}
+
+/* hero */
+
+.hero {
+  margin: auto;
+  position: relative;
+  height: 80vh;
+}
+
+.hero_content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  /* height: 550px; */
+  position: relative;
+  width: 600px;
+  margin: auto;
+  margin-top: 70px;
+}
+
+.hero_big_text,
+.hero_content_p,
+.hero_content_btn {
+  position: relative;
+  z-index: 3;
+}
+
+.hero_content h1 {
+  font-size: 80px;
+  line-height: 1.075;
+  font-weight: 400;
+}
+
+.hero_content p {
+  margin-top: 32px;
+  font-size: 22px;
+  font-weight: 400;
+  letter-spacing: normal;
+  line-height: 1.5;
+}
+
+.hero_content button {
+  margin-top: 40px;
+  border-radius: 2px;
+  padding: 18px 26px;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.1;
+  border: none;
+  background: linear-gradient(135deg, #665DCD 0%, #5FA4E6 44.76%, #D2AB67 100%);
+}
+
+.hero_video {
+  position: absolute;
+  bottom: 40px;
+  left: 0;
+  width: 100%;
+  /* height: 100%; */
+  z-index: 2;
+}
+
+/* tradebar */
+.tradeBar {
+  position: absolute;
+  bottom: 0;
+  z-index: 3;
+  background-color: #fff !important;
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+}
+
+.tradeBar div {
+  background: transparent;
+  color: #15161a;
+
+}
+
+.tradebar_content {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.tradebar_content p {
+  background: transparent;
+  color: #15161a;
+  margin: auto;
+  background-color: #fff;
+  color: #141619;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.1;
+  text-transform: uppercase;
+  z-index: 8;
+  padding: 10px 64px;
+  height: 80px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.tradebar_scroll img,
+.tradebar_item span {
+  background: transparent;
+  color: black;
+}
+
+.tradebar_scroll img {
+  height: 20px;
+  width: 20px;
+}
+
+.tradebar_scroll-wrapper {
+  display: flex;
+  animation: scroll 15s linear infinite;
+  z-index: 5;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.tradebar_scroll {
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
+  margin: 0 30px;
+}
+
+.tradebar_item {
+  display: flex;
+  flex-direction: column;
+}
+
+.tradebar_price {
+  font-size: 20px;
+}
+
+
+/* about */
+
+.about {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  margin-top: 128px;
+  margin-bottom: 128px;
+}
+
+.about_header {
+  max-width: 824px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
+
+.about h2 {
+  font-size: 60px;
+  line-height: 1.3;
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 500;
+}
+
+.about_desc {
+  margin-top: 24px;
+  max-width: 624px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
+
+.about_desc p {
+  color: #e5e5e5;
+  font-family: "satoshi", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: normal;
+  line-height: 1.5;
+}
+
+.about_matrix_wrapper {
+  margin-top: 64px;
+}
+
+.about_matrix {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.about_matrix_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  /* width: 25%; */
+  min-height: 176px;
+  padding: 20px 24px 28px;
+}
+
+.about_matrix_list-value{
+  font-size: 34px;
+  display: block;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-weight: 500;
+    letter-spacing: normal;
+}
+
+.about_matrix_list-type{
+  padding-top: 4px;
+  font-family: "satoshi", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: normal;
+    line-height: 1.5;
+    text-align: center;
 }
